netcandystore.yaml
apiVersion: v1
kind: Service
metadata:
  name: netcandystore
  labels:
    app: netcandystore
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 80
  selector:
    app: netcandystore
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: netcandystore
  name: netcandystore
spec:
  selector:
    matchLabels:
      app: netcandystore
  replicas: 1
  template:
    metadata:
      labels:
        app: netcandystore
      name: netcandystore
    spec:
      tolerations:
      - key: "os"
        value: "Windows"
        Effect: "NoSchedule"
      containers:
      - name: netcandystore
        image: quay.io/donschenck/netcandystore:2021mar8.1
        imagePullPolicy: Always
        securityContext:
          windowsOptions:
            runAsUserName: "ContainerAdministrator"
      nodeSelector:
        beta.kubernetes.io/os: windows
